--- a/swe-nfl-project/src/App.css
+++ b/swe-nfl-project/src/App.css
@@ -12,8 +12,9 @@
   flex-direction: column;
 }
 
-.teamText{
-  margin-bottom: 20px;
+.homeAway{
+  display: flex;
+  justify-content: space-between;
 }
 
 .image {
@@ -62,8 +63,9 @@
 
 .bg{
   background-image: url(./NFL\ Project\ Background.png);
+  height: 1700px;
+  background-repeat: repeat-y;
   margin: 0px;
-  height: 100vh;
   background-size: cover;
   text-align: center;
   align-items: center;
@@ -78,12 +80,12 @@
 
 
 .centerBox{
-  max-height: 80%;
-  max-width: 70%;
+  margin-top: 400px;
+  max-width: 90vh;
   position: relative;
   display: flex;
   justify-content: space-evenly;
-  top: 50%;
+  top: 20%;
   left: 50%;
   transform: translate(-50%, -50%);
   background: rgba(255, 255, 255, .4);
@@ -115,6 +117,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  flex-direction: column;
 }
 
 .App-header {
@@ -139,4 +142,146 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.navigation
+{
+  position:fixed;
+  inset: 20px 0 20px 20px;
+  width: 75px;
+  background:rgba(255, 255, 255, 0.2);
+  transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.navigation.open
+{
+  width: 150px;
+  background: rgb(247, 245, 245);
+}
+.navigation .menuToggle
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 60px;
+  cursor: pointer;
+  display: flex;
+  align-items: center; 
+  justify-content: flex-start;
+  padding: 0 23px;
+}
+.navigation .menuToggle::before
+{
+  content: '';
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background: #3e3e3e;
+  transform: translateY(-8px);
+  transition: 0.5s;
+
+}
+.navigation.open .menuToggle::before
+{
+  transform: translateY(0px) rotate(45deg);
+}
+.navigation .menuToggle::after
+{
+  content: '';
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background: #4c4b4b;
+  transform: translateY(8px);
+  transition: 0.5s;
+  box-shadow: 0 -8px 0 #4b4a4a;
+
+}
+.navigation.open .menuToggle::after
+{
+  transform: translateY(0px) rotate(-45deg);
+  box-shadow: 0 0 0 #333;
+}
+
+.navigation ul
+{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+}
+.navigation ul li
+{
+  list-style: none;
+  position: relative;
+  width: 100%;
+  height: 60px;
+  padding: 0 10px;
+  transition: 0.5;
+}
+.navigation ul li a
+{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.navigation ul li a .icon
+{
+  position: relative;
+  display: block;
+  min-width: 20px;
+  height: 55px;
+  line-height: 60px;
+}
+
+.navigation ul li a .text
+{
+  position: relative;
+  padding: 0 15px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  color: #333;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.navigation.open ul li a .text
+{
+  opacity: 1;
+  visibility: visible;
+}
+
+.statsTable{
+  border: 5px double rgb(0, 15, 62);
+  margin-top: 10px;
+
+}
+.statsCategory{
+  border: 1px solid rgb(0,15, 62);
+
+}
+
+
+.statNum{
+  border: 1px solid black;
+}
+
+.middleBox{
+  display: flex;
+  align-items: flex-start;
+  height: auto;
+}
+
+.text{
+  margin-top: 5px;
 }
